# Xmip

./: .gitignore  .gitmodules.planned  CONTRIBUTING.md  Cargo.toml  Clone-Xmip.ps1  GOVERNANCE.md  LICENSE  New-XmipRepositories.ps1  README.md  ROADMAP.md  SECURITY.md  Set-XmipArchitecture.ps1  Xmip-Git.ps1  Xmip-Git.psd1  Xmip-Git.psm1  xmip-architecture.json
.github/: ci-trigger.md
.github/workflows/: build-diagnostics.yml  ci.yml  placeholder.yml  rust-ci.yml  rust.yml
_origins/: Xmip_C4_Architecture_Document_0.0.0.docx  Xmip_C4_Architecture_Document_0.0.1.docx  Xmip_C4_Architecture_Document_0.0.2.docx  Xmip_Complete_Specification_v0.1.md  Xmip_Current_State_Specification.md  Xmip_Full_Prompt_Detailed.md  Xmip_Intellectual_Property.md
_origins/.claude/: settings.local.json
crates/xmip-cli/: Cargo.toml
crates/xmip-configuration/: Cargo.toml
crates/xmip-exclusiveness/: Cargo.toml
crates/xmip-handler-file/: Cargo.toml
crates/xmip-handler-file/src/: lib.rs  receive_session.rs
crates/xmip-host/: Cargo.toml
crates/xmip-host/src/: lib.rs
crates/xmip-module-abi/: Cargo.toml
crates/xmip-module-api/: Cargo.toml
crates/xmip-persistence/: Cargo.toml
crates/xmip-plugin-api/: Cargo.toml
crates/xmip-runtime/: Cargo.toml
crates/xmip-service/: Cargo.toml
crates/xmip-service/src/: lib.rs
crates/xmip-tracking/: Cargo.toml
deploy/dsc/: xmip-node.dsc.yaml
docs/: Xmip-Architecture-Baseline-Current.md  Xmip-Architecture-Guidelines.md  Xmip-Architecture-Specification-v1.0.md  Xmip-Architecture-Specification-v1.1.md  Xmip-Audit-Architecture.md  Xmip-Engineering-Methodology-SACE.md  Xmip-Exclusiveness-Architecture.md  Xmip-Observer-Architecture.md  Xmip-Repository-Creation-Blueprint.md  Xmip-Routing-Architecture.md  content-handlers.md  crate-boundaries.md  disaster-recovery.md  handler-implementation-plan.md  module-loading.md  process-instances.md  repository-model.md  terminology.md
docs/architecture/: artifact-model.md  audit-and-correlation.md  audit-directive.md  business-process-runtime.md  communication-layering.md  database-selection.md  definition-instance-model.md  definition-instance-namespace.md  foundations.md  (+41 more)
forge/: module-rules.md  xmip-technology-tree.md
install/: install-local.ps1  install-local.sh
scripts/: create-canary-manifest.ps1
src/: actor_model.rs  artifact_actor_mapping.rs  artifact_capability_matrix.rs  artifact_definition.rs  cluster_identity.rs  contracts.rs  definition_instance.rs  enabler_definition.rs  extension_registry.rs  handler.rs  handler_registry.rs  handler_taxonomy.rs  handler_universe.rs  handler_universe_business.rs  handler_universe_enterprise.rs  handler_universe_industrial.rs  handler_universe_network.rs  handler_universe_registry.rs  journey_model.rs  lib.rs  main.rs  management_store.rs  message_lineage.rs  module_loader.rs  module_manifest.rs  module_manifest_toml.rs  protocol_catalog.rs  protocol_contracts.rs  protocol_markers.rs  receive_claims.rs  receive_modes.rs  receive_modules.rs  receive_ownership.rs  receive_security.rs  receive_transport.rs  runtime_message.rs  runtime_persistence.rs  runtime_profile.rs  runtime_stage.rs  runtime_store.rs  (+13 more)
tests/: Set-XmipArchitecture.StrictMode.Tests.ps1  Set-XmipArchitecture.Tests.ps1  artifact_actor_mapping_tests.rs  artifact_capability_matrix_tests.rs  handler_universe_registry_tests.rs  protocol_catalog_tests.rs  sending_actor_mapping_tests.rs  xmip_message_model_tests.rs  xmip_runtime_flow_tests.rs  xmip_send_model_tests.rs
tools/: Initialize-XmipHandlerCrates.ps1
(+126 files in other folders)
