[package]
name = "xmip-handler-file"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
serde.workspace = true
uuid.workspace = true
xmip-core = { path = "../.." }
xmip-module-api = { path = "../xmip-module-api" }
